[package]
name = "network_builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "network_builder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
ndarray = "0.13.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.3"
indicatif = "0.16.2"
